<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".QuestionActivity">

    <ImageView
        android:id="@+id/TimerBox"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_grey"
        android:contentDescription="@string/ClockBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/timer"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/TimerBox"
        app:layout_constraintStart_toStartOf="@+id/TimerBox"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/QuestionBox"
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:layout_marginTop="56dp"
        android:background="@color/light_blue"
        android:contentDescription="@string/QuestionBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore"></ImageView>

    <TextView
        android:id="@+id/tvQuestion_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/number"
        android:textSize="28dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

    <TextView
        android:id="@+id/tvQuestion_Content"
        android:layout_width="360dp"
        android:layout_height="83dp"
        android:layout_marginTop="28dp"
        android:text="@string/content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion_Number" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="107dp"
        android:layout_height="268dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="252dp"
        app:layout_constraintEnd_toEndOf="@+id/QuestionBox"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion_Content">

        <RadioButton
            android:id="@+id/btnOption1"
            android:layout_width="94dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/option1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/btnOption2"
            android:layout_width="96dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/option2"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/btnOption3"
            android:layout_width="98dp"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/option3"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/btnOption4"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/option4"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnQuestionHome"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_brown"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_brown"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>